--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -11,7 +11,7 @@
 		<p>
 			Path: <input type="text" th:field="*{path}" />
 		</p>
-		<button type="submit" name="submit_button">Save</button>
+		<a th:href="@{/}">Cancel</a> <button type="submit" name="submit_button">Save</button>
 	</form>
 </body>
 </html>
