Solving Sonarcloud issues

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
 <meta charset="UTF-8" />
 <title>Topics</title>
@@ -22,7 +22,7 @@
 		<table id="topics_table">
 			<thead>
 				<tr>
-					<th>Topics</th>
+					<th scope="col">Topics</th>
 				</tr>
 			</thead>
 			<tbody>
