--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
 <meta charset="UTF-8" />
 <title>Topics</title>
@@ -22,8 +22,8 @@
 		<table id="telemetry_table">
 			<thead>
 				<tr>
-					<th>Timestamp</th>
-					<th>Value</th>
+					<th id="timestamp">Timestamp</th>
+					<th id="value">Value</th>
 				</tr>
 			</thead>
 			<tbody>
