Solving Sonarcloud Issues

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
 	</div>
 	<!-- ELSE -->
 	<div th:unless="${topics.empty}">
-		<table id="topics_table">
+		<table id="topics_table" aria-label="topics table">
 			<thead>
 				<tr>
 					<th scope="col">Topics</th>
