--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -19,7 +19,7 @@
 	<!-- ELSE -->
 	<div th:unless="${topic.telemetry.empty}">
 		<h3>Telemetry</h3>
-		<table id="telemetry_table">
+		<table id="telemetry_table" aria-label="telemetry table">
 			<thead>
 				<tr>
 					<th id="timestamp">Timestamp</th>
