Updated pom to run E2E tests

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
 	</div>
 	<!-- IF NO TOPICS -->
 	<div th:if="${topics.empty}">
-		<div>No topics</div>
+		<div id="no_topics">No topics</div>
 	</div>
 	<!-- ELSE -->
 	<div th:unless="${topics.empty}">
