--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>Topics</title>
+<title>Homepage</title>
 </head>
 <body>
 	<div>
+		<h1>Sensor Reader</h1>
 		<p id="broker_info">
 			<span>Broker:</span> <span th:text="${broker}"></span> 
 		</p>
