--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -2,7 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>Topics</title>
+<meta http-equiv="refresh" content="10">
+<title>Topic</title>
 </head>
 <body>
 	<div>
